apps/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: nethub
  labels:
    app: keycloak
    app.kubernetes.io/name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: management
      port: 9000
      targetPort: management
